@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:                Sys-Filesystem-ID
-version:             1.04
+version:             1.06
 abstract:            ~
 license:             ~
 author:              ~
