@@ -1,3 +1,12 @@
+2008-09-11 13:23  cvs
+
+	* bin/fsid: polished documentation in clis
+
+2008-09-11 13:14  cvs
+
+	* lib/Sys/Filesystem/ID.pm, t/00.t: skipping tests unless user is
+	  root
+
 2008-09-07 13:57  cvs
 
 	* bin/fsid: touched up documentation in cli
